# lrOS

./: Cargo.toml  build.rs  linker.ld  readme.md  run.sh
.cargo/: config.toml
src/: boot.S  lib.rs  memory.rs  paging.rs
